Try fix dynamic viewport height on mobile nav menu

--- a/apps/labour/web/src/components/Header/Header.module.css
+++ b/apps/labour/web/src/components/Header/Header.module.css
@@ -74,7 +74,7 @@
 .drawerBody {
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 60px);
+  height: calc(100dvh - 60px);
   background-color: light-dark(var(--mantine-color-primary-0), var(--mantine-color-primary-3));
 }
 
